--- a/app.json
+++ b/app.json
@@ -1,28 +1,9 @@
 {
-  "name": "API.AI Facebook integration",
+  "name": "MortgageClub Facebook bot",
   "description": "Api.ai Facebook integration allows you to create Facebook bots with natural language understanding based on Api.ai technology.",
-  "repository": "https://github.com/api-ai/api-ai-facebook",
-  "logo": "http://xvir.github.io/img/apiai.png",
+  "repository": "",
+  "logo": "",
   "keywords": ["api.ai", "facebook", "natural language"],
-  "env": {
-    "APIAI_ACCESS_TOKEN": {
-      "description": "Client access token for Api.ai",
-      "value": ""
-    },
-    "FB_VERIFY_TOKEN": {
-      "description": "Verification code",
-      "value": ""
-    },
-    "FB_PAGE_ACCESS_TOKEN": {
-      "description": "Page Access Token",
-      "value": ""
-    },
-    "APIAI_LANG": {
-      "description": "Agent language",
-      "value": "",
-      "required": false
-    }
-  },
   "engines": {
     "node": "5.10.1"
   }
