--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "api-ai-facebook",
   "version": "1.0.0",
-  "description": "API.AI Slack Bot",
+  "description": "MortgageClub bot",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Danil Skachkov <danil.skachkov@speaktoit.com> (https://api.ai)",
+  "author": "MortgageClub",
   "license": "ISC",
   "dependencies": {
-    "apiai": "^2.0.0",
-    "body-parser": "^1.15.0",
+    "apiai": "2.0.0",
+    "body-parser": "1.15.0",
     "express": "4.13.3",
-    "html-entities": "^1.2.0",
-    "node-uuid": "^1.4.7",
-    "request": "^2.71.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/api-ai/api-ai-facebook"
+    "html-entities": "1.2.0",
+    "node-uuid": "1.4.7",
+    "request": "2.71.0",
+    "dotenv": "2.0.0"
   }
 }
