--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^5.2.1",
     "hashmap": "^2.0.5",
     "html-entities": "1.2.0",
+    "lodash": "^4.11.1",
     "node-uuid": "1.4.7",
     "request": "2.71.0"
   }
