--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "body-parser": "1.15.0",
     "dotenv": "2.0.0",
     "express": "4.13.3",
+    "google-auth-library": "^0.9.7",
+    "googleapis": "^5.2.1",
     "hashmap": "^2.0.5",
     "html-entities": "1.2.0",
+    "lodash": "^4.11.1",
     "node-uuid": "1.4.7",
     "request": "2.71.0"
   }
